Harden local startup persistence and safe Minecraft shutdown recovery